modified to fix center align of login box in mobile view

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -42,10 +42,10 @@ body {
 }
 
 .centered-box {
-	left: 25%;
+	left: 0%;
 	position: absolute;
 	top: 25%;
-	width: 50%;
+	width: 100%;
 }
 
 .panel {
